# debt-inspector

./: .gitignore  =1.1  pyproject.toml
debt_inspector/: ai_chat.py  auth.py  captcha.py  cli.py  inspector.py  web.py
debt_inspector/models/: __init__.py  bankruptcy.py  bankruptcy_case_info.py  court_case.py  debtor.py  enforcement.py  pipeline.py  report.py
debt_inspector/processing/: __init__.py  application_generator.py  deduplicator.py  qr_payment.py  reporter.py
debt_inspector/sources/: __init__.py  base.py  efrsb.py  fns.py  fssp.py  inn_lookup.py  kad_arbitr.py  sudact.py
debt_inspector/storage/: cache.py
debt_inspector/templates/: bankruptcy_form.html  bankruptcy_result.html  base.html  calculator.html  captcha.html  collect.html  login.html  results.html  search.html
debt_inspector/templates/pipeline/: application.html  assessment.html  base_pipeline.html  creditors.html  documents.html  filing.html  payment.html  profile.html
