[project]
name = "debt-inspector"
version = "0.1.0"
description = "Агент-инспектор по поиску долгов: ФССП, суды, ЕФРСБ"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.0",
    "openpyxl>=3.1",
    "rich>=13.0",
    "typer>=0.12",
    "fake-useragent>=1.5",
    "tenacity>=8.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "itsdangerous>=2.2",
    "python-docx>=1.1",
    "segno>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]
browser = ["playwright>=1.44"]

[project.scripts]
debt-inspector = "debt_inspector.cli:app"
debt-inspector-web = "debt_inspector.web:run"

[tool.ruff]
line-length = 100
target-version = "py311"
